# patched-porobot

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml  riot.txt
.cargo/: config-docker.toml  config.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  test.yml  tests.yml
data/: .gitignore
data/core-en_us-1/en_us/data/: globals-en_us.json
data/core-en_us/en_us/data/: globals-en_us.json
data/set1-en_us/en_us/data/: set1-en_us.json
data/set2-en_us/en_us/data/: set2-en_us.json
data/set3-en_us/en_us/data/: set3-en_us.json
data/set4-en_us/: COPYRIGHT  README.md
data/set4-en_us/en_us/data/: set4-en_us.json
data/set5-en_us/en_us/data/: set5-en_us.json
data/set6-en_us/: metadata.json
data/set6-en_us/en_us/data/: set6-en_us.json
data/set6cde-en_us/en_us/data/: set6cde-en_us.json
data/set7-en_us/en_us/data/: set7-en_us.json
data/set7b-en_us/en_us/data/: set7b-en_us.json
data/set8-en_us/: README.md  metadata.json
data/set8-en_us/en_us/data/: set8-en_us.json
src/: lib.rs  main.rs
src/config/: mod.rs
src/data/: load.rs  map.rs  mod.rs  outcomes.rs  schema.rs
src/data/anybundle/: metadata.rs  mod.rs  outcomes.rs
src/data/corebundle/: format.rs  globals.rs  keyword.rs  mod.rs  rarity.rs  region.rs  set.rs  speed.rs  vocabterm.rs
src/data/deckcode/: deck.rs  format.rs  mod.rs  quantity.rs  version.rs
src/data/schema/: art.rs  card.rs  keyword.rs  mod.rs  rarity.rs  region.rs  set.rs  speed.rs  type.rs
src/data/setbundle/: art.rs  card.rs  code.rs  format.rs  keyword.rs  mod.rs  rarity.rs  region.rs  set.rs  speed.rs  subtype.rs  supertype.rs  type.rs
src/discord/: display.rs  handler.rs  main.rs  mod.rs
src/load/: corebundle.rs  mod.rs  setbundle.rs
src/matrix/: main.rs  mod.rs
src/schema/: art.rs  card.rs  keyword.rs  mod.rs  rarity.rs  region.rs  set.rs  speed.rs  type.rs
src/schema/anybundle/: metadata.rs  mod.rs
src/schema/bundle/: metadata.rs  mod.rs
src/schema/corebundle/: globals.rs  keyword.rs  mod.rs  rarity.rs  region.rs  set.rs  speed.rs  vocabterm.rs
src/schema/setbundle/: art.rs  card.rs  keyword.rs  mod.rs  rarity.rs  region.rs  set.rs  speed.rs  type.rs
src/search/: botindex.rs  botsearch.rs  card.rs  cardsearch.rs  index.rs  mod.rs  query.rs  schema.rs
src/telegram/: bin.rs  display.rs  format.rs  handler.rs  inline.rs  main.rs  mod.rs  result.rs
tests/: test_legality.rs
