[package]
name = "patched_porobot"
version = "0.4.1"
authors = ["Stefano Pigozzi <me@steffo.eu>"]
edition = "2021"
description = "Legends of Runeterra card database utilities and bots"
repository = "https://github.com/Steffo99/patched-porobot"
license = "AGPL-3.0-or-later"
keywords = ["game", "deserialization", "legends-of-runeterra", "bot", "search"]
categories = ["games", "parser-implementations"]

[package.metadata.docs.rs]
features = ["search", "telegram", "discord", "matrix"]
targets = ["patched_porobot", "patched_porobot_telegram", "patched_porobot_discord", "patched_porobot_matrix"]
rustdoc-args = ["--document-private-items"]


[dependencies]
# base
log = { version = "0.4.17" }
itertools = { version = "0.10.3" }
regex = { version = "1.6.0" }
lazy_static = { version = "1.4.0" }
# exec
pretty_env_logger = { version = "0.4.0", optional = true }
glob = { version = "0.3.0", optional = true }
# data
serde = { version = "1.0.140", features = ["derive"] }
serde_json = { version = "1.0.82" }
# search
tantivy = { version = "0.18.0", optional = true }
# telegram
teloxide = { version = "0.10.1", optional = true }
reqwest = { version = "0.11.11", optional = true }
tokio = { version =  "1.20.1", features = ["rt-multi-thread", "macros"], optional = true }
# discord
# matrix


[features]
# data = []  # Always included
exec = ["pretty_env_logger", "glob"]
search = ["tantivy"]
telegram = ["exec", "search", "teloxide", "reqwest", "tokio"]
discord = ["exec", "search"]
matrix = ["exec", "search"]


[lib]
name = "patched_porobot"

[[bin]]
name = "patched_porobot_telegram"
required-features = ["telegram"]

[[bin]]
name = "patched_porobot_discord"
required-features = ["discord"]

[[bin]]
name = "patched_porobot_matrix"
required-features = ["matrix"]
