[package]
name = "patched_porobot"
version = "0.8.0"
authors = ["Stefano Pigozzi <me@steffo.eu>"]
edition = "2021"
description = "Legends of Runeterra card database utilities and bots"
repository = "https://github.com/Steffo99/patched-porobot"
license = "AGPL-3.0-or-later"
keywords = ["game", "deserialization", "legends-of-runeterra", "bot", "search"]
categories = ["games", "parser-implementations"]

[package.metadata.docs.rs]
all-features = true
cargo-args = ["--bins", "--lib"]
rustdoc-args = ["--document-private-items"]


[dependencies]
# base
log = { version = "0.4.17" }
itertools = { version = "0.10.3" }
regex = { version = "1.6.0" }
lazy_static = { version = "1.4.0" }
data-encoding = { version = "2.3.2" }
varint-rs = { version = "2.2.0" }
glob = { version = "0.3.0" }
# exec
pretty_env_logger = { version = "0.4.0", optional = true }
# data
serde = { version = "1.0.140", features = ["derive"] }
serde_json = { version = "1.0.82" }
# search
tantivy = { version = "0.18.0", optional = true }
# telegram
teloxide = { version = "0.10.1", optional = true }
reqwest = { version = "0.11.11", optional = true }
tokio = { version =  "1.20.3", features = ["rt-multi-thread", "macros"], optional = true }
md5 = { version = "0.7.0", optional = true }
rand = { version = "0.8.5", optional = true }
# discord
serenity = { version = "0.11.5", features = ["client", "cache", "gateway", "rustls_backend", "model"], default-features = false, optional = true }
# matrix


[features]
# data = []  # Always included
exec = ["pretty_env_logger"]
search = ["tantivy"]
telegram = ["exec", "search", "teloxide", "reqwest", "tokio", "md5", "rand"]
discord = ["exec", "search", "serenity", "tokio"]
matrix = ["exec", "search"]


[lib]
name = "patched_porobot"

[[bin]]
name = "patched_porobot_telegram"
required-features = ["telegram"]

[[bin]]
name = "patched_porobot_discord"
required-features = ["discord"]

[[bin]]
name = "patched_porobot_matrix"
required-features = ["matrix"]
